Fix mobile image overflow

--- a/src/styles/art.less
+++ b/src/styles/art.less
@@ -8,6 +8,7 @@ body {
 
 .image {
   height: 80%;
+  max-width: -webkit-fill-available;
 }
 
 .label {
